# standing-desk-reminder

./: Cargo.toml  LICENSE  README.md
src/: config.rs  icon.rs  lock.rs  main.rs  notify.rs  reminder.rs  service.rs  tray.rs
